@@ -1,5 +1,8 @@
 2008-05-03  Albert Graef  <Dr.Graef@t-online.de>
 
+	* util.cc (myiconv): Apple's iconv takes const char** as 2nd
+	parameter. #ifdef that case. Reported by Ryan Schmidt.
+
 	* interpreter.cc (declare_extern): Fixed a bug in the generated
 	wrapper code for external calls, which caused function arguments
 	to be garbage-collected prematurely, when they were still needed
